src/theme.scss
@use './theme/fonts';
@use './theme/sky';
@use './theme/fx';
@import url('https://cdn.jsdelivr.net/gh/dracula/pygments/dracula.css');

// VARS
:root {
  --width: 850px;
  --main-padding: 2em;
  --element-spacing: 0.8em;
  --font-header: Grandstander, Lato, Raleway, sans-serif;
  --font-text: Gabarito, Nunito, Avenir Next, Avenir, Arial, system-ui, sans-serif;
  --font-mono: 'Maple Mono', Iosevka, Consolas, monospace;
  --color-body-bg-top: #18082c;
  --color-body-bg-bottom: #0d4344;
  --color-post-bg: #221822;
  --color-input-bg: #1f141f;
  --color-fg: #eee;
  --color-faint: #b7aab9;
  --color-quote: #f7c6f5;
  --color-accent: #964fb3;
  --color-accent2: #4e285e;
  --color-accent3: #3f1d4e;
  --color-link: #caf0f9;
  --color-link-underline: #6cf7d4;
  --color-link-underline-visited: #54a3ca;
}

// RESET
* { box-sizing: border-box; margin: 0; }
img, picture, video, canvas, svg { display: block; }
input, button, textarea, select { font: inherit; }
p, h1, h2, h3, h4, h5, h6, ul, ol, blockquote, math { overflow-wrap: break-word; }

// COMMON ELEMENTS
body {
  max-width: var(--width);
  padding: 1em;
  margin: 0 auto;
  background: var(--color-body-bg-top);
  background-attachment: fixed;
  color: var(--color-fg);
  font-family: var(--font-text);
  font-size: 18px;
  font-optical-sizing: auto;
  line-height: 1.5;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;

  .title {
    margin: 4rem 0 1rem;

    h1 {
      display: inline-block;
      margin: 0;
      color: var(--color-fg);
      font-size: 4em;
      font-weight: 800;
      text-align: center;
      text-shadow: 2px 2px 6px var(--color-accent), -2px -2px 8px var(--color-accent2);
      letter-spacing: -2px;

      @supports (font-variation-settings: "wght" 800) { font-variation-settings: "wght" 800; }
    }
  }
}

nav {
  margin: 2rem 0;

  p {
    margin: 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 0.5em 1em;

    a:visited { color: var(--color-link); }
  }
}

main {
  background: var(--color-post-bg);
  padding: var(--main-padding);
  border: 4px outset var(--color-accent);
  border-radius: var(--main-padding);
  box-shadow: 4px 4px 20px var(--color-post-bg);

  > * + * { margin-top: var(--element-spacing); }
}

footer {
  text-align: center;
  margin: 3em 0 1em;

  > span:not(#footer-directive) { display: none; }
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-header);
  font-weight: 500;
  font-style: oblique 2deg;
  letter-spacing: -1px;
  line-height: normal;

  @supports (font-variation-settings: "wght" 550) { font-variation-settings: "wght" 550; }

  + * { margin-top: 0; }
}

h1 { font-size: 2.5em; }
h2 { font-size: 1.7em; }
h3 { font-size: 1.4em; }
h4 { font-size: 1.2em; }
h5 { font-size: 1.1em; }

strong { font-weight: 800; }

a {
  color: var(--color-link);
  text-decoration-thickness: 3px;
  text-decoration-color: var(--color-link-underline);
  text-underline-offset: 3px;

  &:hover { text-decoration-thickness: 4px; }
  &:visited { text-decoration-color: var(--color-link-underline-visited); }

  small &, .footnotes & {
    text-decoration-thickness: 2px;
    &:hover { text-decoration-thickness: 3px; }
  }
}

ul, ol { padding-inline-start: 1.5em; }

blockquote {
  padding: 0.5em 1em;
  padding-right: 0;
  border-left: 4px solid var(--color-accent);
  font-weight: normal;
  background: linear-gradient(to right, var(--color-accent3), transparent 50%);
  color: var(--color-quote);

  p + p { margin-top: 0.5rem; }
}

table {
  border-collapse: collapse;
  margin: 0 auto;

  th, td {
    padding: 0.25em 0.5em;
    border: 1px solid var(--color-faint);
  }
}

img {
  max-width: 100%;
  margin: 1rem auto;
}

hr {
  border: 6px dotted var(--color-accent2);
  border-style: dotted none none;
  margin: 2em 0;
}

pre, code, time, .highlight {
  font-family: var(--font-mono);
  font-size: 0.9em;
  font-feature-settings: "zero";
}

time { font-style: normal; }
code, .highlight { background: #111; }

.highlight {
  padding: 1.5em;
  border: 2px solid var(--color-accent2);
  border-radius: 0.5em;
  margin-block-start: 1em;
  margin-block-end: 1em;
  box-shadow: 0 2px 4px var(--color-accent3);

  pre {
    white-space: pre-wrap;
    tab-size: 4;
  }
}

code {
  padding: 0.1em 0.4em;
  border: 2px solid var(--color-accent3);
  border-radius: 0.5em;
}

sup.footnote-ref a {
  color: var(--color-link-underline);
  text-decoration: none;
}

small {
  font-size: small;
  color: var(--color-faint);
}

mark {
  padding: 0 0.125em;
  background: var(--color-accent2);
  color: inherit;
}

figcaption {
  text-align: center;
  margin: -0.5rem 0 0.5rem;
  color: var(--color-faint);
}

input, button, textarea {
  background: var(--color-input-bg);
  color: var(--color-fg);
  padding: 0.25em 0.5em;
  border: 3px solid var(--color-accent3);
  border-radius: 0.5em;
  outline: none;
  transition: border-color 0.2s ease;

  &:hover { border-color: var(--color-accent2); }
  &:focus { border-color: var(--color-accent); }
}

input[type="submit"], button { cursor: pointer; }

// BEAR ELEMENTS
.home, .page, .post {
  h1:first-of-type {
    text-align: center;

    & + p, & + h2 {
      text-align: center;
      margin-top: 0;
    }
  }
}

// Special case for the home page
.home h1:first-of-type + h2 + p { margin-top: var(--element-spacing); }

ul.blog-posts {
  list-style: none;
  padding: unset;

  li {
    display: flex;
    margin-bottom: 0.35em;
    span { flex: 0 0 150px; }
  }
}

.tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
}

.tags a, .tag {
  padding: 0.3em 0.6em;
  border-radius: 1em;
  background: var(--color-accent2);
}

.footnotes {
  font-size: 0.85em;
  color: var(--color-faint);

  a.footnote { margin-left: 0.25rem; }
}

button.upvote-button {
  padding: 0.25em;
  border: 2px solid var(--color-accent2);
  margin-top: var(--element-spacing);
  border-radius: 6px;
  background: transparent;
  color: var(--color-quote);
  &::after { content: ':o'; }

  * { color: inherit; }
  .upvote-count { display: none; }
  &[disabled] {
    border-color: var(--color-link);
    color: var(--color-link) !important;
    &::after { content: ':)' }
  }
}

// EXTRA ELEMENTS
img.banner {
  height: 250px;
  width: 100%;
  object-fit: cover;

  &.small { height: 150px }
  &.large { height: 350px; }

  &.top { object-position: top; }
  &.left { object-position: left; }
  &.bottom { object-position: bottom; }
  &.right { object-position: right; }
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
  padding: 0;
  list-style: none;

  img { margin: 0; }
  figcaption { margin: 0.5rem 0 0; }

  > * { flex: 1 0 30%; }
  &.pair > * { flex-basis: 48%; }
  &.quartet > * { flex-basis: 23%; }
}

blockquote.centerpiece {
  border: none;
  background: linear-gradient(to right, transparent, var(--color-accent3) 50%, transparent);
  text-align: center;
}

.yt-video {
  aspect-ratio: 16 / 9;
  width: 100%;
}

// PAGES
// - Post archive
.blog {
  h3 > .tag { margin-left: 0.3em; }
}

// - Guestbook
.guestbook {
  main > p { text-align: center; }
  input:not([type=submit]) { width: 100%; }
  input[type=submit] {
    display: block;
    margin: 0 auto;
  }

  #guestbooks___guestbook-form-container { margin: 2em 0; }
  #guestbooks___guestbook-form > * + * { margin-top: 1em; }
  #guestbooks___guestbook-messages-header { text-align: center; }
  #guestbooks___guestbook-messages-container {
    margin-bottom: 2em;
    > div + div { margin-top: var(--element-spacing); }
    > div > p + blockquote { margin-top: 0.5rem; }
  }

  .guestbooks___user-info {
    display: flex;
    gap: 1em;
    margin: 0 1em;

    .guestbooks___input-container {
      &.name { flex: 1; }
      &.website { flex: 2; }
    }
  }
}

// - Now
.now {
  .music-rec {
    display: flex;
    gap: 1em;
    padding: 1em;
    margin: 0.5em 0;

    .album-art {
      width: 220px;

      img {
        width: 100%;
        margin: 0;
        box-shadow: 0 2px 8px var(--color-accent2);
      }
    }

    .album-info small { font-size: 1rem; }
    .music-info { flex: 1; }
  }
}

// RESPONSIVENESS
@media only screen and (max-width: 765px) {
  main {
    padding: 1.5em 1em;
    border-radius: 1em;
  }

  ul.blog-posts li {
    flex-direction: column;
    margin-bottom: 1em;
    span { flex: unset; }
  }

  .guestbook .guestbooks___user-info {
    flex-direction: column;
    margin: 0;
  }
}

@media only screen and (max-width: 555px) {
  body {
    padding: 1em 0.5em;
    font-size: 15px;
  }

  header .title h1 { font-size: 3.5em; }

  h1 { font-size: 2.2em; }
  h2 { font-size: 1.5em; }
  h3 { font-size: 1.3em; }

  .gallery {
    flex-direction: column;
    gap: 0.5em;
    > * { flex: unset; }
  }

  .now .music-rec {
    flex-direction: column;

    .album-art {
      width: 100%;
      img { max-width: 300px; margin: 0 auto; }
    }

    .music-info h3 { text-align: center; }
  }
}

